--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Dual PDF Viewer</title>
+  <link rel="icon" type="image/png" href="favicon.ico" sizes="32x32" />
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:wght@100..700" rel="stylesheet" />
   <!-- CSS & PDF.js -->
   <link rel="stylesheet" href="style.css">
